--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
             "email": "superdweebie@gmail.com"
         }
     ],
-    "repositories": [{ "type": "composer", "url": "https://raw.github.com/superdweebie/dojo/master" }],	
+    "repositories": [{ "type": "composer", "url": "https://raw.github.com/superdweebie/dojo/master" }],
     "require": {
-        "dojo/dojo" : "1.8.0rc1",
-        "dojo/dijit" : "1.8.0rc1",
-        "dojo/dojox" : "1.8.0rc1",
-        "dojo/util" : "1.8.0rc1"
+        "dojo/dojo" : "1.8.0",
+        "dojo/dijit" : "1.8.0",
+        "dojo/dojox" : "1.8.0",
+        "dojo/util" : "1.8.0"
     }
 }
