--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "dojo/dijit"  : "1.8.0",
         "dojo/dojox"  : "1.8.0",
         "dojo/util"   : "1.8.0",
-        "dojo/Sds"    : "0.1"
+        "dojo/Sds"    : "dev-master"
     }
 }
