--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "repositories": [{ "type": "composer", "url": "https://raw.github.com/superdweebie/dojo/master" }],
     "require": {
-        "dojo/dojo"   : "1.8.1",
-        "dojo/dijit"  : "1.8.1",
-        "dojo/dojox"  : "1.8.1",
-        "dojo/util"   : "1.8.1"
+        "dojo/dojo"   : "1.8.3",
+        "dojo/dijit"  : "1.8.3",
+        "dojo/dojox"  : "1.8.3.patched",
+        "dojo/util"   : "1.8.3"
     }
 }
